# Haiyajan

./: .astylerc  .clang-format  .editorconfig  .gitignore  .valgrind_supp  CMakeLists.txt  GNUmakefile  Makefile  Makefile.depend  Nmakefile  README.md  build_win.bat  buildtools.mk
.github/workflows/: build.yml  c-cpp.yml
buildtools/: .gitignore  Makefile.test  echo.c  inc.mk
docs/: CNAME  enough.css  haiyajan.css  index.html
inc/: all.h  cap.h  font.h  gamecontrollerdb.h  gcdb_bin_all.h  gcdb_bin_linux.h  gcdb_bin_windows.h  gl.h  haiyajan.h  input.h  libretro.h  load.h  log.h  menu.h  optparse.h  parsley.h  play.h  rec.h  retro-extensions.h  sig.h  tai.h  timer.h  tinf.h  ui.h  util.h
meta/: Haiyajan.rc  emscripten_shell.html  menu.xcf  resource.h  winres.rc
meta/menu/: README.md  dpiconv.m
src/: cap.c  font.c  gl.c  haiyajan.c  input.c  jafari.c  load.c  menu.c  parsley.c  play.c  png.c  rec.c  sig.c  static.c  tai.c  timer.c  tinflate.c  ui.c  util.c  vp9.c
test/: Makefile  minctest.h  test.c
test/libretro_abort/: Makefile  libretro-abort.c
test/libretro_av/: Makefile  README.md  libretro-av.c
test/libretro_init/: Makefile  README.md  libretro-init.c
tools/: Makefile  echo.c  gen_gcdb.sh  libretro2static.c
tools/buildroot/: Config.in  external.desc  external.mk
tools/buildroot/board/board/x86/: linux_defconfig
tools/buildroot/board/raspberrypi0/: linux.config
tools/buildroot/board/x86/: linux_defconfig
tools/buildroot/configs/: busybox.config  qemu_IA32_defconfig  raspberrypi0_defconfig  x86_defconfig
tools/buildroot/configs/linux_patches/: 0001-Mark-spinlocks-noinline-when-inline-spinlocks-are-di.patch  0002-Fix-read-buffer-overflow-in-delta-ipc.patch  0003-amdkfd-Fix-extern-declaration.patch  0004-x86-xen-Mark-xen_vcpu_stolen-as-__visible.patch  0005-lto-Export-export-symbol-assembler-symbols-for-LTO.patch  0006-x86-lto-Export-int3-assembler-symbols-for-LTO.patch  0007-lto-Add-__noreorder-and-mark-initcalls-__noreorder.patch  0008-lto-bpf-Mark-interpreter-jump-table-as-noreorder.patch  0009-x86-lto-Disable-LTO-for-real-mode-code.patch  0010-lto-Allow-LTO-for-sys_ni.c.patch  0011-lto-Use-C-version-for-SYSCALL_ALIAS-cond_syscall.patch  0012-Kbuild-lto-Fixes-for-gcc-ld.patch  0013-kbuild-kallsyms-Ignore-source-file-weak-symbols.patch  0014-Kbuild-lto-Generate-debuginfo-for-temporary-kallsyms.patch  0015-Kbuild-lto-Add-Link-Time-Optimization-support.patch  0016-x86-lto-Disable-relative-init-pointers-with-LTO.patch  0017-x86-lto-Enable-LTO-for-x86.patch  0018-kbuild-genksyms-Support-C-output-in-genksyms.patch  0019-kbuild-modpost-Read-.ver.o.-files-to-resolve-CRC-sym.patch  0020-kbuild-modversions-Use-C-to-generate-genksyms-crc-sy.patch  0021-kbuild-Clean-.ver-files.patch  0022-kbuild-kallsyms-Put-kallsyms-into-own-section.patch  0023-kbuild-Don-t-include-const-variable-in-kallsyms-with.patch  0024-kbuild-Support-padding-in-kallsyms-tables.patch  0025-kbuild-kallsyms-Support-single-pass-kallsyms.patch  0026-kbuild-link-vmlinux-Don-t-delete-link-vmlinux-output.patch  0027-kbuild-kallsyms-Support-compiling-relative_base-sepa.patch  0028-kbuild-kallsyms-Build-relative_base-separately-for-s.patch  0029-kbuild-kallsyms-Add-sanity-check-for-offsets.patch  0030-fixup-kbuild-kallsyms-Support-single-pass-kallsyms.patch  0031-x86-lto-Disable-LTO-for-purgatory.patch  0032-fixup-kbuild-modversions-Use-C-to-generate-genksyms-.patch  0033-x86-mce-Fix-return-type-of-cec-init-function.patch  0034-fixup-kbuild-modversions-Use-C-to-generate-genksyms-.patch  0035-fixup-kbuild-modversions-Use-C-to-generate-genksyms-.patch  0036-fixup-kbuild-kallsyms-Support-single-pass-kallsyms.patch  0037-fixup-kbuild-modversions-Use-C-to-generate-genksyms-.patch  0038-Kbuild-link-vmlinux-Reuse-vmlinux.o-for-final-link.patch
tools/buildroot/overlay/etc/: inittab
